--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: Setup Terraform Credentials
           command: |
             mkdir -p ~/.terraform.d
-            echo '{"credentials": {"aedifexhack.jfrog.io": {"token": "$JFROG"}}}' > ~/.terraform.d/credentials.tfrc.json
+            echo "{\"credentials\": {\"aedifexhack.jfrog.io\": {\"token\": \"${JFROG}\"}}}" > ~/.terraform.d/credentials.tfrc.json
       - run:
           name: Terraform Init
           command: terraform init
