--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,10 @@ jobs:
           command: terraform init
       - run:
           name: Terraform Plan
-          command: terraform plan -out=tfplan
+          command: terraform plan \
+            -var "aws_access_key=${AWS_ACCESS_KEY_ID}" \
+            -var "aws_secret_key=${AWS_SECRET_ACCESS_KEY}"
+
 
   terraform-apply:
     docker:
