--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,12 @@ jobs:
       - run:
           name: Terraform Init
           command: terraform init
-#      - run:
-#          name: Terraform Apply
-#          command: terraform apply -auto-approve tfplan
+      - run:
+          name: Terraform Apply
+          command: |
+            terraform apply \
+              -var "aws_access_key=${AWS_ACCESS_KEY_ID}" \
+              -var "aws_secret_key=${AWS_SECRET_ACCESS_KEY}"
 
 workflows:
   version: 2
