--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,8 @@ jobs:
           command: |
             terraform apply \
               -var "aws_access_key=${AWS_ACCESS_KEY_ID}" \
-              -var "aws_secret_key=${AWS_SECRET_ACCESS_KEY}"
+              -var "aws_secret_key=${AWS_SECRET_ACCESS_KEY}" \
+              --auto-approve
 
 workflows:
   version: 2
