--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,15 +45,27 @@ jobs:
               -var "aws_secret_key=${AWS_SECRET_ACCESS_KEY}" \
               --auto-approve
 
+  iac-security-scanning:
+    docker:
+      - image: hashicorp/terraform:light
+    working_directory: ~/project
+    steps:
+      - checkout
+      - run:
+          name: Run code security tests
+          command: echo "code security"
+
 workflows:
   version: 2
   build-and-deploy:
     jobs:
       - terraform-plan
+      - iac-security-scanning
       - terraform-approve:
           type: approval
           requires:
             - terraform-plan
+            - iac-security-scanning
       - terraform-apply:
           requires:
             - terraform-approve
