--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  artifactory-orb: jfrog/artifactory-orb@1.0.1
+
 jobs:
   terraform-plan:
     docker:
@@ -77,7 +80,7 @@ jobs:
 
 workflows:
   version: 2
-  build-and-deploy:
+  plan-approve-apply:
     jobs:
       - terraform-plan
       - iac-security-scanning
