--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,9 @@ workflows:
       - terraform-plan:
           requires:
             - connect-artifactory
-      - iac-security-scanning
+      - iac-security-scanning:
+          requires:
+            - connect-artifactory
       - terraform-approve:
           type: approval
           requires:
